syntax = "proto3";

service PostService {
  rpc Get(GetRequest) returns (PostResponse);

  rpc CreateAsCharacter(CreateAsCharacterRequest) returns (PostResponse);
  rpc CreateAsCorporaiton(CreateAsCorporationRequest) returns (PostResponse);
  rpc CreateAsAlliance(CreateAsAllianceRequest) returns (PostResponse);

  rpc GetCharacterWall(GetCharacterWallRequest) returns (PaginatedPostResponse);
  rpc GetCorporationWall(GetCorporationWallRequest) returns (PaginatedPostResponse);
  rpc GetAllianceWall(GetAllianceWallRequest) returns (PaginatedPostResponse);
  rpc GetHashtagWall(GetHashtagWallRequest) returns (PaginatedPostResponse);
  rpc GetLocationWall(GetLocationWallRequest) returns (PaginatedPostResponse);
  rpc GetLatestWall(GetLatestWallRequest) returns (PaginatedPostResponse);
}

message GetRequest {
  string postId = 1;
}

message CreatePost {
  string content = 1;
  string type = 2; // POST_TYPES
  int32 locationId = 3;
  int32 corporationId = 4;
  int32 characterId = 5;
  int32 allianceId = 6;
  string url = 7;
}

message CreateAsCharacterRequest {
  CreatePost post = 1;
  int32 characterId = 2;
}

message CreateAsCorporationRequest {
  CreatePost post = 1;
  int32 corporationId = 2;
}

message CreateAsAllianceRequest {
  CreatePost post = 1;
  int32 allianceId = 2;
}

message PaginationRequest {
  int32 limit = 1;
  int32 page = 2;
}

message GetCharacterWallRequest {
  PaginationRequest pagination = 1;
  int32 characterId = 2;
}

message GetCorporationWallRequest {
  PaginationRequest pagination = 1;
  int32 corporationId = 2;
}

message GetAllianceWallRequest {
  PaginationRequest pagination = 1;
  int32 allianceId = 2;
}

message GetHashtagWallRequest {
  PaginationRequest pagination = 1;
  string hashtag = 2;
}

message GetLocationWallRequest {
  PaginationRequest pagination = 1;
  int32 locationId = 2;
}

message GetLatestWallRequest {
  PaginationRequest pagination = 1;
}

message UrlResponse {
  string author = 1;
  string date = 2;
  string description = 3;
  string image = 4;
  string video = 5;
  string lang = 6;
  string logo = 7;
  string publisher = 8;
  string title = 9;
  string url = 10;

  int32 killmailId = 11;
}

message PostResponse {
  string id = 1;
  string content = 2;
  string type = 3; // POST_TYPES
  int32 killmailId = 4;
  UrlResponse url = 5;
  string createdAt = 6;
  int32 locationId = 7;
  int32 characterId = 8;
  int32 corporationId = 9;
  int32 allianceId = 10;
  int32 characterWallId = 11;
  int32 corporationWallId = 12;
  int32 allianceWallId = 13;
  repeated string hashtags = 14;
}

message PaginatedPostResponse {
  repeated PostResponse posts = 1;
  int32 count = 2;
}